# CodeGhost

./: CMakeLists.txt  README.md
src/: main.cpp
src/cli/: cli.cpp  cli.hpp
src/core/: Dockerfile  daemon.cpp  daemon.hpp  defaults.hpp  eventprocessor.cpp  eventprocessor.hpp  filtering.cpp  filtering.hpp  hash_comparator.cpp  hash_comparator.hpp  hasher.cpp  hasher.hpp  indexer.cpp  indexer.hpp  logger.cpp  logger.hpp  searcher.cpp  searcher.hpp  storage.cpp  storage.hpp  watcher.cpp  watcher.hpp
src/core/watcher/: debounce_buffer.cpp  debounce_buffer.hpp  event_processor.cpp  event_processor.hpp  move_tracker.cpp  move_tracker.hpp  utils.cpp  utils.hpp  watch_registry.cpp  watch_registry.hpp  watcher.cpp  watcher.hpp
src/notifier/: notifier.cpp  notifier.hpp
src/utils/: utils.cpp  utils.hpp
